Experiments with occupations.
